# key-repeat-configurator

./: Cargo.toml
.github/workflow/: cicd.yaml
.github/workflows/: cicd.yaml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/platform/: linux.rs  windows.rs
shared-lib/: Cargo.toml
src/: main.rs
src/platform/: linux.rs  mod.rs  windows.rs
ui/: Cargo.toml  Dioxus.toml  tailwind.css
ui/assets/: tailwind.css
ui/src/: main.rs
